fixed icons of github and linkedin

--- a/web/index.html
+++ b/web/index.html
@@ -48,8 +48,8 @@
     </ul>
 
     <div>
-      <a href="https://github.com/rb5014"><img align="left" src="web/icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
-      <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="web/icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
+      <a href="https://github.com/rb5014"><img align="left" src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
+      <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
     </div>
   </body>
 </html>
