updates some styles and html tags

--- a/web/index.html
+++ b/web/index.html
@@ -16,40 +16,45 @@
       </nav>
     </header>
 
-    <h1 id="introduction">Introduction</h1>
-    <p>Holbify is a music player with basic features such as play/pause/stop a song, show song informations, go to next/previous song, change the volume of the program, create/open playlists...</p>
-
-    <a href="https://youtu.be/rlmdrxb_77I" target="_blank">
-      <button>View Demo</button>
-    </a>
-
-    <img class="fit-picture" src="screenshots/main_window_start.png" alt="Screenshot of the main window at start">
-
-    <h2 id="features">Features</h2>
-
-    <h3>Play a song / Change volume / Show song information</h3>
-    <p>The user by clicking on the Play button will either open a dialog to choose a file, or start again a song already loaded. Loading another song will send the previous one in a "Recent playlist", permitting the user to use the Previous/Next buttons.</p>
-    <img class="fit-picture" src="screenshots/main_window_features.png" alt="Screenshot of the main window playing a song">
-
-    <h3>Create playlists</h3>
-    <p>It is possible to create playlists, stored locally with the name of your choice!</p>
-    <img class="fit-picture" src="screenshots/create_playlist.png" alt="Screenshot of the create playlist window">
-
-    <h3>Open playlists</h3>
-    <p>Play your best Bruno Mars playlist any time you want after you created it!</p>
-    <img class="fit-picture" src="screenshots/open_playlist.png" alt="Screenshot of the open playlist window">
-
-    <h2 id="about">About</h2>
-    <p>This is a Portfolio Project for end of first year at <a href="https://www.holbertonschool.fr/">Holberton School</a> by Romain Bayle.</p>
-    <p>This music player is inspired by:</p>
-    <ul>
-      <li>VLC media player</li>
-      <li>Windows Media Player</li>
-    </ul>
-
-    <div>
-      <a href="https://github.com/rb5014"><img align="left" src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
-      <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
-    </div>
+    <main>
+      <h1 id="title">HOLBIFY</h1>
+      <h2 id="introduction">Introduction</h1>
+      <p>Holbify is a music player with basic features such as play/pause/stop a song, show song informations, go to next/previous song, change the volume of the program, create/open playlists...</p>
+  
+      <a href="https://youtu.be/rlmdrxb_77I" target="_blank">
+        <button>View Demo</button>
+      </a>
+  
+      <img class="fit-picture" src="screenshots/main_window_start.png" alt="Screenshot of the main window at start">
+  
+      <h2 id="features">Features</h2>
+  
+      <h3>Play a song / Change volume / Show song information</h3>
+      <p>The user by clicking on the Play button will either open a dialog to choose a file, or start again a song already loaded. Loading another song will send the previous one in a "Recent playlist", permitting the user to use the Previous/Next buttons.</p>
+      <img class="fit-picture" src="screenshots/main_window_features.png" alt="Screenshot of the main window playing a song">
+  
+      <h3>Create playlists</h3>
+      <p>It is possible to create playlists, stored locally with the name of your choice!</p>
+      <img class="fit-picture" src="screenshots/create_playlist.png" alt="Screenshot of the create playlist window">
+  
+      <h3>Open playlists</h3>
+      <p>Play your best Bruno Mars playlist any time you want after you created it!</p>
+      <img class="fit-picture" src="screenshots/open_playlist.png" alt="Screenshot of the open playlist window">
+  
+      <h2 id="about">About</h2>
+      <p>This is a Portfolio Project for end of first year at <a href="https://www.holbertonschool.fr/">Holberton School</a> by Romain Bayle.</p>
+      <p>This music player is inspired by:</p>
+      <ul>
+        <li>VLC media player</li>
+        <li>Windows Media Player</li>
+      </ul>
+    </main>
+    
+    <footer>
+      <div>
+        <a href="https://github.com/rb5014"><img align="left" src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
+        <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
+      </div>
+    </footer>
   </body>
 </html>
