fixed html about part and links to github and linkedin

--- a/web/index.html
+++ b/web/index.html
@@ -42,19 +42,21 @@
       <img class="fit-picture" src="screenshots/open_playlist.png" alt="Screenshot of the open playlist window">
   
       <h2 id="about">About</h2>
-      <p>This is a Portfolio Project for end of first year at <a href="https://www.holbertonschool.fr/">Holberton School</a> by Romain Bayle.</p>
-      <p>This music player is inspired by:</p>
-      <ul>
-        <li>VLC media player</li>
-        <li>Windows Media Player</li>
-      </ul>
+      <p>This is a Portfolio Project for <a href="https://www.holbertonschool.fr/">Holberton School</a>, created by <a href="https://www.linkedin.com/in/romain-bayle-48a11a243">Romain Bayle</a></p>
+      <p>Since I've always played guitar, and listened to a lot of music, the idea of creating a music player to showcase my talents as a developper came naturally.</p>
+         I also had to learn the C++ language for my future internship starting in March, I wanted to get a lead and be ready as soon as possible.
+         Therefore, I decided to mix the two ideas into one: Creating a music player in C++.
+      <p>C++ is known to be one of the most complex language, and this project confirmed it for me. It was a great challenge, and that is also what i was looking for
+         when I started creating this application from scratch. 
+         Not everything is perfect yet, but I will be adding more features in the future and also customize the design a little bit more.
+      </p>
     </main>
     
-    <footer>
       <div>
+        Here is a link to my repository:
         <a href="https://github.com/rb5014"><img align="left" src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
+        And here is a link to my Linkedin profile:
         <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
       </div>
-    </footer>
   </body>
 </html>
