modifications to github and linkedin image around

--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
     </main>
     
       <div>
-        Here is a link to my repository:
+        <p>Here is a link to my repository:</p>
         <a href="https://github.com/rb5014"><img align="left" src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
         And here is a link to my Linkedin profile:
         <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
