--- a/web/index.html
+++ b/web/index.html
@@ -50,13 +50,13 @@
          when I started creating this application from scratch. 
          Not everything is perfect yet, but I will be adding more features in the future and also customize the design a little bit more.
       </p>
-    </main>
-    
       <div>
         <p>Here is a link to my repository:</p>
         <a href="https://github.com/rb5014"><img align="left" src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
-        And here is a link to my Linkedin profile:
+        <p>And here is a link to my Linkedin profile:</p>
         <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
       </div>
+    </main>
+    
   </body>
 </html>
