--- a/web/index.html
+++ b/web/index.html
@@ -52,9 +52,9 @@
       </p>
       <div>
         <p>Here is a link to my repository:</p>
-        <a href="https://github.com/rb5014"><img align="left" src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
+        <a href="https://github.com/rb5014"><img src="icons/github.svg" alt="Romain Bayle | Github" width="42px"/></a>
         <p>And here is a link to my Linkedin profile:</p>
-        <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img align="left" src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
+        <a href="https://www.linkedin.com/in/romain-bayle-48a11a243"><img src="icons/linkedin.svg" alt="Romain Bayle | LinkedIn" width="42px"/></a>
       </div>
     </main>
     
