--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
       <h2 id="introduction">Introduction</h1>
       <p>Holbify is a music player with basic features such as play/pause/stop a song, show song informations, go to next/previous song, change the volume of the program, create/open playlists...</p>
   
-      <a href="https://youtu.be/rlmdrxb_77I" target="_blank">
+      <a href="https://youtu.be/KtrOtNdmieA" target="_blank">
         <button>View Demo</button>
       </a>
   
